# local-ai-inspector

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  domain-model.md  project-vision.md
docs/decisions/: 0001-project-foundations.md
src/local_ai_inspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/local_ai_inspector/cli/: main.py
src/local_ai_inspector/collectors/: base.py  cpu.py  memory.py  os.py  system.py
src/local_ai_inspector/core/: inspector.py
src/local_ai_inspector/domain/: finding.py  inspection.py  observation.py  recommendation.py
tests/unit/: test_cpu_collector.py  test_inspection.py  test_memory_collector.py  test_system_collector.py
