[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-inspector"
version = "0.1.0"
description = "Inspect, validate and optimize local AI environments."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Local AI Inspector Contributors" }
]

dependencies = [
    "psutil>=7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.12"
]

[project.scripts]
local-ai-inspector = "local_ai_inspector.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
